--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<i class="fab fa-github"></i>
 					</a>
 					<a
-						href="https://t.me/HlibSamodin"
+						href="https://t.me/ihavenotgyet"
 						target="_blank"
 						rel="noopener noreferrer"
 						class="telegram"
